ffi/include/rfe.h


typedef enum Result {
  RESULT_SUCCESS = 0,
  RESULT_INCOMPATIBLE_FIRMWARE_ERROR,
  RESULT_INVALID_INPUT_ERROR,
  RESULT_INVALID_OPERATION_ERROR,
  RESULT_IO_ERROR,
  RESULT_NO_DATA,
  RESULT_NULL_PTR_ERROR,
  RESULT_TIMEOUT_ERROR,
} Result;
typedef uint8_t SignalGeneratorModel;
typedef struct ScreenData ScreenData;
typedef struct SignalGenerator SignalGenerator;
typedef struct SpectrumAnalyzer SpectrumAnalyzer;
typedef struct SignalGeneratorConfig {
  uint64_t start_hz;
  uint64_t cw_hz;
  uint32_t total_steps;
  uint64_t step_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  uint16_t sweep_power_steps;
  Attenuation start_attenuation;
  PowerLevel start_power_level;
  Attenuation stop_attenuation;
  PowerLevel stop_power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfig;
typedef struct SignalGeneratorConfigAmpSweep {
  uint64_t cw_hz;
  uint16_t sweep_power_steps;
  Attenuation start_attenuation;
  PowerLevel start_power_level;
  Attenuation stop_attenuation;
  PowerLevel stop_power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigAmpSweep;
typedef struct SignalGeneratorConfigCw {
  uint64_t cw_hz;
  uint32_t total_steps;
  uint64_t step_freq_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  RfPower rf_power;
} SignalGeneratorConfigCw;
typedef struct SignalGeneratorConfigFreqSweep {
  uint64_t start_hz;
  uint32_t total_steps;
  uint64_t step_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigFreqSweep;
typedef struct SpectrumAnalyzerConfig {
  uint64_t start_freq_hz;
  uint64_t step_size_hz;
  uint64_t stop_freq_hz;
  uint64_t center_freq_hz;
  uint64_t span_hz;
  int16_t max_amp_dbm;
  int16_t min_amp_dbm;
  uint16_t sweep_len;
  bool is_expansion_radio_module_active;
  Mode mode;
  uint64_t min_freq_hz;
  uint64_t max_freq_hz;
  uint64_t max_span_hz;
  uint64_t rbw_hz;
  int8_t amp_offset_db;
  CalcMode calc_mode;
} SpectrumAnalyzerConfig;
bool rfe_is_driver_installed(void);
char **rfe_port_names(uintptr_t *len);
void rfe_free_port_names(char **port_names_ptr, uintptr_t len);
enum Result rfe_screen_data_get_pixel(const struct ScreenData *screen_data,
                                      uint8_t x,
                                      uint8_t y,
                                      bool *pixel);
enum Result rfe_screen_data_get_pixel_checked(const struct ScreenData *screen_data,
                                              uint8_t x,
                                              uint8_t y,
                                              bool *pixel);
enum Result rfe_screen_data_timestamp(const struct ScreenData *screen_data, int64_t *timestamp);
void rfe_screen_data_free(struct ScreenData *screen_data);
enum Result rfe_signal_generator_model_name(SignalGeneratorModel model,
                                            char *name_buf,
                                            uintptr_t len);
uint64_t rfe_signal_generator_model_min_freq_hz(SignalGeneratorModel model);
uint64_t rfe_signal_generator_model_max_freq_hz(SignalGeneratorModel model);
struct SignalGenerator *rfe_signal_generator_connect(void);
struct SignalGenerator *rfe_signal_generator_connect_with_name_and_baud_rate(const char *name,
                                                                             uint32_t baud_rate);
void rfe_signal_generator_free(struct SignalGenerator *rfe);
enum Result rfe_signal_generator_send_bytes(const struct SignalGenerator *rfe,
                                            const uint8_t *bytes,
                                            uintptr_t len);
enum Result rfe_signal_generator_port_name(const struct SignalGenerator *rfe,
                                           char *port_name_buf,
                                           uintptr_t buf_len);
uintptr_t rfe_signal_generator_port_name_len(const struct SignalGenerator *rfe);
enum Result rfe_signal_generator_firmware_version(const struct SignalGenerator *rfe,
                                                  char *firmware_version_buf,
                                                  uintptr_t buf_len);
uintptr_t rfe_signal_generator_firmware_version_len(const struct SignalGenerator *rfe);
enum Result rfe_signal_generator_serial_number(const struct SignalGenerator *rfe,
                                               char *serial_number_buf,
                                               uintptr_t buf_len);
uintptr_t rfe_signal_generator_serial_number_len(const struct SignalGenerator *rfe);
enum Result rfe_signal_generator_lcd_on(const struct SignalGenerator *rfe);
enum Result rfe_signal_generator_lcd_off(const struct SignalGenerator *rfe);
enum Result rfe_signal_generator_enable_dump_screen(const struct SignalGenerator *rfe);
void rfe_signal_generator_set_config_callback(const struct SignalGenerator *rfe,
                                              void (*callback)(struct SignalGeneratorConfig config,
                                                               void *user_data),
                                              void *user_data);
void rfe_signal_generator_set_config_amp_sweep_callback(const struct SignalGenerator *rfe,
                                                        void (*callback)(struct SignalGeneratorConfigAmpSweep config,
                                                                         void *user_data),
                                                        void *user_data);
void rfe_signal_generator_set_config_cw_callback(const struct SignalGenerator *rfe,
                                                 void (*callback)(struct SignalGeneratorConfigCw config,
                                                                  void *user_data),
                                                 void *user_data);
void rfe_signal_generator_set_config_freq_sweep_callback(const struct SignalGenerator *rfe,
                                                         void (*callback)(struct SignalGeneratorConfigFreqSweep config,
                                                                          void *user_data),
                                                         void *user_data);
void rfe_spectrum_analyzer_set_sweep_callback(const struct SpectrumAnalyzer *rfe,
                                              void (*callback)(const float *sweep,
                                                               uintptr_t sweep_len,
                                                               uint64_t start_hz,
                                                               uint64_t stop_hz,
                                                               void *user_data),
                                              void *user_data);
void rfe_spectrum_analyzer_set_config_callback(const struct SpectrumAnalyzer *rfe,
                                               void (*callback)(struct SpectrumAnalyzerConfig config,
                                                                void *user_data),
                                               void *user_data);