ffi/include/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace CsBindgen
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "rfe";





        /// <summary>
        ///  Returns whether the platform RF Explorer USB serial driver appears to be installed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_is_driver_installed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool rfe_is_driver_installed();

        /// <summary>
        ///  Returns a heap-allocated array of RF Explorer serial port names.
        ///
        ///  If `len` is non-NULL, it is set to the number of returned names. The returned
        ///  array and each string in it are owned by the caller and must be released with
        ///  `rfe_free_port_names`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_port_names", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte** rfe_port_names(nuint* len);

        /// <summary>
        ///  Frees an array returned by `rfe_port_names`.
        ///
        ///  `len` must be the same length returned by `rfe_port_names`. Passing `NULL`
        ///  is allowed and has no effect.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_free_port_names", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_free_port_names(byte** port_names_ptr, nuint len);

        /// <summary>
        ///  Gets one pixel from an RF Explorer LCD screen capture.
        ///
        ///  The top-left pixel is `(0, 0)` and the bottom-right pixel is `(127, 63)`.
        ///  On success, `pixel` is set to `true` for an enabled pixel and `false` for a
        ///  disabled pixel. Returns `RESULT_INVALID_INPUT_ERROR` if the coordinates are
        ///  out of range.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_screen_data_get_pixel", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_screen_data_get_pixel(ScreenData* screen_data, byte x, byte y, bool* pixel);

        /// <summary>
        ///  Gets one pixel from an RF Explorer LCD screen capture with bounds checking.
        ///
        ///  This is equivalent to `rfe_screen_data_get_pixel`; both functions return
        ///  `RESULT_INVALID_INPUT_ERROR` for out-of-range coordinates.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_screen_data_get_pixel_checked", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_screen_data_get_pixel_checked(ScreenData* screen_data, byte x, byte y, bool* pixel);

        /// <summary>
        ///  Writes the screen capture timestamp as Unix seconds.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_screen_data_timestamp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_screen_data_timestamp(ScreenData* screen_data, long* timestamp);

        /// <summary>
        ///  Frees screen data returned by an `rfe_*_screen_data` function.
        ///
        ///  Passing `NULL` is allowed and has no effect.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_screen_data_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_screen_data_free(ScreenData* screen_data);

        /// <summary>
        ///  Writes the display name of a signal generator model.
        ///
        ///  `name_buf` must point to a writable buffer of at least `len` bytes. The
        ///  buffer receives a null-terminated C string. Returns
        ///  `RESULT_INVALID_INPUT_ERROR` if `len` is too small.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_model_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_model_name(SignalGeneratorModel model, byte* name_buf, nuint len);

        /// <summary>
        ///  Returns the model's minimum supported output frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_model_min_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_signal_generator_model_min_freq_hz(SignalGeneratorModel model);

        /// <summary>
        ///  Returns the model's maximum supported output frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_model_max_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_signal_generator_model_max_freq_hz(SignalGeneratorModel model);

        /// <summary>
        ///  Connects to the first RF Explorer signal generator found on a CP210x USB serial port.
        ///
        ///  Returns `NULL` if no compatible device can be opened and initialized. The
        ///  returned pointer is owned by the caller and must be freed with
        ///  `rfe_signal_generator_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_connect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SignalGenerator* rfe_signal_generator_connect();

        /// <summary>
        ///  Connects to a named serial port using the given baud rate.
        ///
        ///  `name` must be a valid null-terminated UTF-8 string. Returns `NULL` if the
        ///  pointer is null, the string is invalid, or the device cannot be opened and
        ///  initialized. The returned pointer is owned by the caller and must be freed
        ///  with `rfe_signal_generator_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_connect_with_name_and_baud_rate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SignalGenerator* rfe_signal_generator_connect_with_name_and_baud_rate(byte* name, uint baud_rate);

        /// <summary>
        ///  Frees a signal generator returned by `rfe_signal_generator_connect`.
        ///
        ///  Passing `NULL` is allowed and has no effect.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_free(SignalGenerator* rfe);

        /// <summary>
        ///  Sends raw bytes to the signal generator.
        ///
        ///  `bytes` must point to at least `len` bytes. This function is primarily for
        ///  advanced users that need to send RF Explorer commands not wrapped by this API.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_send_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_send_bytes(SignalGenerator* rfe, byte* bytes, nuint len);

        /// <summary>
        ///  Writes the connected serial port name to a caller-provided buffer.
        ///
        ///  Use `rfe_signal_generator_port_name_len` to get the required buffer size,
        ///  including the terminating null byte.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_port_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_port_name(SignalGenerator* rfe, byte* port_name_buf, nuint buf_len);

        /// <summary>
        ///  Returns the buffer size required for `rfe_signal_generator_port_name`.
        ///
        ///  The returned size includes the terminating null byte. Returns zero if `rfe`
        ///  is `NULL`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_port_name_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint rfe_signal_generator_port_name_len(SignalGenerator* rfe);

        /// <summary>
        ///  Writes the firmware version to a caller-provided buffer.
        ///
        ///  Use `rfe_signal_generator_firmware_version_len` to get the required buffer
        ///  size, including the terminating null byte.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_firmware_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_firmware_version(SignalGenerator* rfe, byte* firmware_version_buf, nuint buf_len);

        /// <summary>
        ///  Returns the buffer size required for `rfe_signal_generator_firmware_version`.
        ///
        ///  The returned size includes the terminating null byte. Returns zero if `rfe`
        ///  is `NULL`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_firmware_version_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint rfe_signal_generator_firmware_version_len(SignalGenerator* rfe);

        /// <summary>
        ///  Writes the device serial number to a caller-provided buffer.
        ///
        ///  Use `rfe_signal_generator_serial_number_len` to get the required buffer
        ///  size, including the terminating null byte. Returns `RESULT_NO_DATA` if the
        ///  device does not report a serial number.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_serial_number", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_serial_number(SignalGenerator* rfe, byte* serial_number_buf, nuint buf_len);

        /// <summary>
        ///  Returns the buffer size required for `rfe_signal_generator_serial_number`.
        ///
        ///  The returned size includes the terminating null byte. Returns zero if `rfe`
        ///  is `NULL` or no serial number has been received.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_serial_number_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint rfe_signal_generator_serial_number_len(SignalGenerator* rfe);

        /// <summary>
        ///  Turns the signal generator LCD on.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_lcd_on", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_lcd_on(SignalGenerator* rfe);

        /// <summary>
        ///  Turns the signal generator LCD off.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_lcd_off", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_lcd_off(SignalGenerator* rfe);

        /// <summary>
        ///  Enables screen dump messages from the signal generator.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_enable_dump_screen", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_enable_dump_screen(SignalGenerator* rfe);
